--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -194,6 +194,7 @@
     <ClCompile Include="..\..\tests\0110-batch_size.cpp" />
     <ClCompile Include="..\..\tests\0111-delay_create_topics.cpp" />
     <ClCompile Include="..\..\tests\0112-assign_unknown_part.c" />
+    <ClCompile Include="..\..\tests\0114-sticky_partitioning.cpp" />
     <ClCompile Include="..\..\tests\8000-idle.cpp" />
     <ClCompile Include="..\..\tests\test.c" />
     <ClCompile Include="..\..\tests\testcpp.cpp" />
