--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "confluent-kafka-javascript",
-  "version": "v0.1.8-devel",
+  "name": "@confluentinc/kafka-javascript",
+  "version": "v0.1.9-devel",
   "description": "Node.js bindings for librdkafka",
   "librdkafka": "master",
   "librdkafka_win": "2.3.0",
