--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -38,6 +38,9 @@ blocks:
       agent:
         machine:
           type: s1-prod-ubuntu20-04-amd64-2
+      prologue:
+        commands:
+          - '[[ -z $DOCKERHUB_APIKEY ]] || docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY'
       jobs:
         - name: "Build from source and test for musl"
           commands:
@@ -49,6 +52,9 @@ blocks:
       agent:
         machine:
           type: s1-prod-ubuntu20-04-arm64-1
+      prologue:
+        commands:
+          - '[[ -z $DOCKERHUB_APIKEY ]] || docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY'
       jobs:
         - name: "Build from source and test for musl"
           commands:
@@ -110,6 +116,9 @@ blocks:
           value: "linux"
         - name: LIBC
           value: "glibc"
+      prologue:
+        commands:
+          - '[[ -z $DOCKERHUB_APIKEY ]] || docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY'
       jobs:
         - name: "Release: LTS:18"
           commands:
@@ -154,6 +163,9 @@ blocks:
           value: "linux"
         - name: LIBC
           value: "glibc"
+      prologue:
+        commands:
+          - '[[ -z $DOCKERHUB_APIKEY ]] || docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY'
       jobs:
         - name: "Release: LTS:18"
           commands:
@@ -198,6 +210,9 @@ blocks:
           value: "linux"
         - name: LIBC
           value: "musl"
+      prologue:
+        commands:
+          - '[[ -z $DOCKERHUB_APIKEY ]] || docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY'
       jobs:
         - name: "Release: LTS:18"
           commands:
@@ -236,6 +251,9 @@ blocks:
           value: "linux"
         - name: LIBC
           value: "musl"
+      prologue:
+        commands:
+          - '[[ -z $DOCKERHUB_APIKEY ]] || docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY'
       jobs:
         - name: "Release: LTS:18"
           commands:
